# dirl-rs

./: Cargo.toml  LICENSE.md
src/: main.rs
