[package]
name = "dirl"
version = "0.1.0"
authors = [
    "rsahwe <rsahwe@gmx.net>",
]
edition = "2024"
repository = "https://github.com/rsahwe/dirl-rs"

[dependencies]
clap =  { version = "4.5", features = ["derive"] }
clap_mangen = { version = "0.2.26", optional = true }
glob = "0.3"

[features]
mangen = ["clap_mangen"]
